# cmus-visualizer

./: Makefile.am  README  README.md  autogen.sh  cmusvis.c  configure.ac  new_config
.deps/: cmusvis-cmusvis.Po
input/: pulse.c  pulse.h
output/: terminal_ncurses.c  terminal_ncurses.h
